# Prototypia

./: .gitattributes  .gitconfig  .gitignore  1  Arf2.fbs  Arf2echo.fbs  Nemesis.script  README.md  Viewer.collection  Viewer.gui  Viewer.gui_script  Viewer.license  Viewer.script  __CanvasRef__.script  game.project
AcArf2/include/: ease_constants.h
AcArf2/src/: (deprecated)libarf2.hpp  ext.cpp
AcArf3/: ext.manifest
AcArf3/api/: arf3.script_api
AcArf3/include/: arf3.h
AcArf3/src/: ext.cpp  judge.cpp  loader.cpp  maker.cpp  settings.cpp  update.cpp
AcAudio/: ext.manifest
AcDefOS/: ext.manifest
AcDefOS/include/: defos.h
AcDefOS/src/: defos.cpp  defos_mac.mm  defos_win.cpp
AcLFS/: ext.manifest
AcPlay/: AcInput.script  README  ext.manifest
AcPlay/AcArf2/: ext.manifest  libarf2_instable.hpp
AcPlay/api/: arf2.script_api  input.script_api
AcPlay/include/: arf2_generated.h  includes.h
AcPlay/src/: ext.cpp  i_impl.cpp  i_impl.mm  m_functions.hpp  m_impl.cpp  m_impl.mm  ma_functions.hpp  ma_impl.cpp  ma_impl.mm  p_functions.hpp  (+1 more)
AeDirtyLarry/: dirtylarry.lua  larryfont.font  radio.gui  radio_label.gui
Python/: README.md  __LICENSE__  __README__  pyproject.toml
Python/Prototypia/: Arf2.py  Arf2Fb.py  Arf2Index.py  WishChild.py  WishGroup.py  _Arf2Handle_.py  __init__.py
System/: Nemesis.script  Viewer.appmanifest  Viewer.icns  Viewer.input_binding  Viewer.render_script
Viewer/: LICENSE  LICENSE.viewer  README.md  Viewer.collection  Viewer.gui  Viewer.gui_script  Viewer.script  game.project
Visual/: Anim.go  Echo.go  Hint.go  UI.atlas  Wish.go
(+51 files in other folders)
