[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "Prototypia"
version = "0.5.2"
keywords = [ "aerials", "prototypia", "rhythm-game-charting" ]
authors = [
    { name = "1dealGas", email = "i@1deal.cc" }
]
description = "Aerials Chart[Fumen] Writer & Compiler"
readme = "__README__"
license = { file = "__LICENSE__" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ "flatbuffers" ]